# hello-embedded

./: Cargo.toml  README.md
async-guest/: Cargo.toml
async-guest/src/: bindings.rs  lib.rs
guest/: Cargo.toml
guest/src/: bindings.rs  lib.rs
host/: Cargo.toml
host/src/: main.rs
linux-host/: Cargo.toml
linux-host/src/: main.rs
src/: bindings.rs  lib.rs
wit/: async.wit  blink.wit  embedded.wit
