[package]
name = "hello-embedded"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = "0.4.1"
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }
compiler_builtins = { version = "0.1.108", features = ["mem"] }
wasi-async-runtime = { path = "/home/dev/wasm-http-tools/crates/wasi-async-runtime", default-features = false }
wasi = { version = "0.12.1", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["async-await-macro"] }

[package.metadata.component]
# We don't need an adapter, but cargo-component doesn't yet have an option to
# disable the adapter. As a workaround, use an empty adapter.
adapter = "empty.wasm"

[package.metadata.component.target]
path = "../wit"
world = "async-blink"

[package.metadata.component.target.dependencies]
# The async interfaces depend on wasi-io.
"wasi:io" = { path = "../wit/deps/io" }

[package.metadata.component.bindings]
# Enable this to put `std` usage behind a feature, so that we can use `no_std`.
std_feature = true

[profile.release]
# Strip out debug info to produce a small component.
strip = true
